# tcom

./: .flake8  .gitignore  Makefile  README.md  foo_bar.py  setup.cfg  tox.ini
docs/: Makefile  deploy.sh  examples.py  index.md  mkdocs.yml  requirements.txt  tailwind.config.js
docs/assets/examples/: ExDialog.html
docs/assets/stylesheets/: common.css
docs/docs/: index.html  index.md
docs/docs/_src/: home.css
docs/docs/assets/css/: index.css
docs/docs/docs/: index.md
docs/docs/guide/: attributes.md  css_and_js.md  extra.md  index.md  jinja.md  third_party.md
docs/docs/static/css/: common.css  home.css
docs/en/: mkdocs.yml
docs/en/docs/: index.md
docs/en/site/: 404.html  index.html  sitemap.xml
docs/es/: mkdocs.yml
docs/es/docs/: index.md
docs/es/site/: 404.html  index.html  sitemap.xml
docs/examples/: Dialog.html.jinja  ExDialog.html.jinja  ExSwitch.html.jinja  Page.html.jinja  Switch.html.jinja
docs/overrides/: _footer.html  _header.html  home.html  landing.html  main.html
docs/site/: 404.html  index.html  sitemap.xml
docs/site/docs/: index.html
docs/site/search/: search_index.json
jinjax/: __init__.py  assets_middleware.py  cli.py  component.py  extension.py  middleware.py
oot/: catalog.py  cli.py  component.py  exceptions.py  jinjax.py  middleware.py  utils.py
oot/js/: OotJs.html.jinja  delegated-events.js  oot.js
tcom/: catalog.py  component.py  exceptions.py  html_attrs.py  jinjax.py
tcom/js/: TcJs.html.jinja
tests/: test_catalog.py  test_cli.py  test_component.py  test_extension.py  test_html_attrs.py  test_jinjax.py  test_middleware.py
tests/components/: Button.jinja  Card.html.jinja  Card.jinja  CloseBtn.html.jinja  Greeting.jinja  Page.jinja  button.html.jinja  button.py  card.py  close_btn.py  greeting.html.jinja  greeting.py  page.html.jinja  page.py  with_global.html.jinja  with_global.py
tests/components/button/: __init__.py
tests/components/card/: Card.jinja  __init__.py
tests/components/close_btn/: CloseBtn.jinja  __init__.py
tests/components/greeting/: __init__.py
tests/components/page/: Page.css  Page.html.jinja  Page.jinja  __init__.py
tests/components/products/: Show.html.jinja  Show.jinja
(+27 files in other folders)
