[metadata]
name = oot
version= 0.1
url = https://github.com/jpsca/oot
project_urls =
    Home Page = https://jpsca.github.io/oot/
    Documentation = https://jpsca.github.io/oot/
    Issue Tracker = https://github.com/jpsca/oot/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Text Processing :: Markup :: HTML
license = MIT
license_files = MIT-LICENSE
description = Replace your HTML templates with Python server-Side components
long_description = file:README.md
long_description_content_type = text/markdown


[options]
packages = find:
include_package_data = true
python_requires = >=3.7,<4.0
install_requires =
    jinja2 ~= 3.0
    MarkupSafe ~= 2.0
    whitenoise ~= 5.3

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    flake8
    flake8-bugbear
    flake8-import-order
    flake8-logging-format
    flake8-quotes
    pytest
    pytest-cov

dev =
    mypy

[options.entry_points]
console_scripts =
    oot = oot.cli:run


[flake8]
application-package-names = oot
application-import-names = oot
import-order-style = pycharm

select =
  B,  # bugbear
  C,  # mccabe, comprehensions, commas
  E,  # pycodestyle errors
  F,  # pyflakes
  G,  # logging format
  I,  # imports
  P,
  Q,  # quotes
  T4,  # mypy
  W,  # pycodestyle warnings

ignore =
    C901,  # x is too complex
    E203,  # whitespace before ':'
    E501,
    F405,  # x defined from star imports
    W503,  # line break before binary operator
    W605,

max-line-length = 98
max-complexity = 10

inline-quotes = double
multiline-quotes = double
docstring-quotes = double

exclude =
  .git,
  .venv
  __pycache__,
  conftest.py,
  docs,


[tool:pytest]
addopts = --doctest-modules
